<resources>
    <string name="app_name">Proyecto2</string>
    <string name="title_home">Home</string>
    <string name="title_search">Buscar</string>
    <string name="title_map">Ver Mapa</string>
    <string name="title_add">Añadir</string>
    <string name="title_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
