<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/add_place"
        android:icon="@drawable/baseline_photo_camera_black_48"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_login_black_24dp"
        android:title="@string/title_login" />

</menu>
